--- a/content/inngest.mdx
+++ b/content/inngest.mdx
@@ -3,6 +3,7 @@ title: "Inngest, orchestrer et automatiser vos workflows"
 publishedAt: "2025-01-09"
 summary: "Inngest est une plateforme puissante conçue pour automatiser vos workflows. Elle peut transformer vos processus métier et booster la productivité de votre équipe."
 keywords: ["inngest", "orchestrer", "automatiser", "workflow", "productivité"]
+descriptionSocials: "🚀 Découvrez comment utiliser Inngest pour la gestion des tâches asynchrones dans vos applications Next.js et Python."
 author: "Sacha Choumiloff"
 image: "/icon-logo-inngest.png"
 tags: ["Inngest","workflows asynchrones","orchestrateur","automatisation","processus métier","Node.js","Python","Airflow","Temporal","tutoriel workflows"]
@@ -577,13 +578,13 @@ On pourrait encore ajouter beaucoup de fonctionnalités à notre workflow. Par e
 ## Inngest: ses avantages et ses inconvénients :
 
 **Avantages** :
-- Intégration simplifiée : Les SDK d’Inngest s’intègrent facilement dans les bases de code existantes, permettant aux développeurs de créer rapidement des fonctions fiables sans gérer l’infrastructure sous-jacente. ￼
-- Flexibilité : Inngest est adapté à divers cas d’utilisation, notamment les workflows durables, les files d’attente, les tâches en arrière-plan et les travaux planifiés ou cron. ￼
-- Scalabilité : La plateforme est conçue pour évoluer avec les besoins des applications modernes, assurant une gestion efficace des processus à grande échelle. ￼
+- **Intégration simplifiée** : Les SDK d’Inngest s’intègrent facilement dans les bases de code existantes, permettant aux développeurs de créer rapidement des fonctions fiables sans gérer l’infrastructure sous-jacente. ￼
+- **Flexibilité** : Inngest est adapté à divers cas d’utilisation, notamment les workflows durables, les files d’attente, les tâches en arrière-plan et les travaux planifiés ou cron. ￼
+- **Scalabilité** : La plateforme est conçue pour évoluer avec les besoins des applications modernes, assurant une gestion efficace des processus à grande échelle. ￼
 
 **Inconvénients** :
-- Courbe d’apprentissage : Bien qu’Inngest simplifie l’orchestration des workflows, les développeurs novices peuvent nécessiter un temps d’adaptation pour maîtriser pleinement ses fonctionnalités.
-- Dépendance à la plateforme : L’adoption d’Inngest peut entraîner une dépendance vis-à-vis de cet outil pour la gestion des workflows, ce qui pourrait poser des défis en cas de migration vers une autre solution.
+- **Courbe d’apprentissage** : Bien qu’Inngest simplifie l’orchestration des workflows, les développeurs novices peuvent nécessiter un temps d’adaptation pour maîtriser pleinement ses fonctionnalités.
+- **Dépendance à la plateforme** : L’adoption d’Inngest peut entraîner une dépendance vis-à-vis de cet outil pour la gestion des workflows, ce qui pourrait poser des défis en cas de migration vers une autre solution.
 
 En somme, Inngest est une solution puissante pour les équipes de développement souhaitant orchestrer et automatiser des workflows asynchrones de manière efficace, avec une intégration simplifiée et une flexibilité adaptée aux besoins des applications modernes.
 
