update metadata keywords

--- a/content/game-of-life.mdx
+++ b/content/game-of-life.mdx
@@ -7,6 +7,7 @@ author: "Sacha Choumiloff"
 image: "/game-of-life.png"
 tags: ["Jeu de la Vie", "automate cellulaire", "Next.js", "TypeScript", "automate cellulaire"]
 readingTime: "15 min"
+keywordsSEO: ["jeu de la vie", "game of life", "conway game of life", "automate cellulaire", "simulation vie artificielle", "cellular automaton", "grid patterns", "pattern generation", "cellular simulation", "grid computation", "state management", "react grid", "typescript implementation", "next.js game", "glider pattern", "oscillator pattern", "spaceship pattern", "gosper glider gun", "blinker pattern", "beacon pattern", "butterfly pattern", "rle format", "conway patterns", "turing complete", "mathematical simulation", "emergent behavior", "complex systems", "mathematical patterns", "computational theory", "react implementation", "typescript game", "grid visualization", "interactive simulation", "web simulation", "css grid", "canvas animation", "game state management", "performance optimization", "browser game", "cellular automata tutorial", "game of life tutorial", "learning cellular automata", "interactive learning", "programming concepts", "educational simulation", "game of life variants", "highlife", "life-like cellular automata", "extended rules", "custom patterns", "pattern creation", "john conway", "conway mathematics", "history of cellular automata", "scientific american game of life", "simulation tools", "pattern analysis", "artificial life", "computational biology", "emergence study", "grid implementation", "pattern storage", "pattern encoding", "rle parsing", "pattern generation", "state calculation", "neighbor counting", "boundary handling", "grid wrapping", "performance optimization", "interactive grid", "pattern selection", "grid controls", "simulation controls", "pattern library", "user interface", "responsive design", "dark mode support", "grid visualization", "pattern preview"]
 ---
 
 ## Introduction
