--- a/content/server-action-et-api.mdx
+++ b/content/server-action-et-api.mdx
@@ -1,15 +1,40 @@
 ---
-title: "NextJs : Server function et API route ?"
+title: "NextJs : Server function et API route"
 publishedAt: "2025-02-03"
 summary: "Découvrez les différences entre les server functions et les API routes dans Next.js, et comment choisir la bonne méthode pour votre application."
+keywords: ["Next.js", "Server functions", "API Routes", "Server Components", "React", "Backend", "Web Development"]
+descriptionSocials: "🚀 Server functions vs API Routes dans Next.js : découvrez comment choisir la meilleure approche pour votre application et éviter les pièges de sécurité !"
 author: "Sacha Choumiloff"
 image: "/nextjs-logo.svg"
+keywordsSEO: [
+    "next.js server functions",
+    "next.js api routes",
+    "server actions next.js",
+    "react server components",
+    "next.js backend",
+    "server side rendering",
+    "next.js routing",
+    "next.js security",
+    "next.js authentication",
+    "api endpoints next.js",
+    "server side functions",
+    "next.js architecture",
+    "next.js best practices",
+    "next.js development",
+    "react server actions",
+    "next.js api development",
+    "server side vs client side",
+    "next.js performance",
+    "next.js middleware",
+    "next.js tutorial"
+]
 tags: ["Next.js", "Server functions", "API Routes", "Développement Web"]
+
 readingTime: "5 min"
 ---
 
 
-# Next.js : Server function et API route ?
+# Next.js : Server function et API route
 Depuis sa création, Next.js s'est imposé comme l'un des frameworks React les plus puissants et populaires. Mais au-delà du simple rendu côté serveur (SSR) ou de la génération statique (SSG), Next.js offre une flexibilité impressionnante pour la gestion des données, notamment à travers deux mécanismes majeurs : les API Routes et les Server Functions de React (server functions, server components, etc.).
 
 Quand faut-il utiliser une **API route** plutôt qu'une **Server Function** ? Comment choisir la meilleure approche en fonction de votre besoin ? Plongeons ensemble dans ces concepts essentiels pour faire les bons choix architecturaux.
