--- a/content/server-action-et-api.mdx
+++ b/content/server-action-et-api.mdx
@@ -263,4 +263,8 @@ N'oubliez pas que la sécurité doit toujours être implémentée côté serveur
 
 Si vous souhaitez approfondir ces concepts, je vous invite à consulter [la documentation officielle de Next.js](https://nextjs.org/docs) qui est régulièrement mise à jour avec les dernières bonnes pratiques.
 
-
+Dans un **prochain billet**, nous explorerons en détail comment sécuriser et valider vos server functions de manière robuste :
+- Validation des données entrantes et sortantes
+- Gestion des permissions et des droits d'accès
+- Typage fort et vérification à l'exécution
+- Gestion des erreurs et des cas limites
