Backlink sur les articles
-> on affiche dans des SubArticlesCard les 4 derniers articles les plus récents
-> dans chaque article on affiche les 4 articles les plus récents

--- a/content/next-zod.mdx
+++ b/content/next-zod.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Zod : Validez vos données avec élégance et simplicité"
-description: "Découvrez comment utiliser Zod pour valider vos données de manière élégante et simple dans vos applications Next.js."
+summary: "Découvrez comment utiliser Zod pour valider vos données de manière élégante et simple dans vos applications Next.js."
 descriptionSocials: "🚀 Zod : Validez vos données avec élégance et simplicité dans Next.js !"
 keywords: ["Zod", "Validation", "Next.js", "TypeScript", "Data Validation", "Type Safety"]
 author: "Sacha Choumiloff"
